<?xml version="1.0"?>
<package format="2">
  <name>bug_pipeline_config</name>
  <version>0.1.0</version>
  <description>The bug_pipeline_config package</description>

  <maintainer email="developer@todo.todo">Patrick van Laar</maintainer>
  <license>MIT</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>panda_moveit_config</exec_depend>
</package>
